Added gitMap concept.

--- a/gen.readme/bodyArticleEnFa.tex
+++ b/gen.readme/bodyArticleEnFa.tex
@@ -64,10 +64,69 @@ mainatained by Mohsen Banan. If you are here to do some form of due
 diligence on him and look at some the software and documents as his
 sample code, we suggest that you continue at Section XX.
 
+If you are interested in obtaining the sources for one or more of our
+python pip packages that are published at PYPI, we suggest that you
+clone the appropraite repository from bisos-pip, unisos-pip, blee-pip
+or roPerf-pip.
+
 Most of the repositories here are related to ByStar. If you want to
 install and try out ByStar, we suggest that you continue at bisos.genesis.
 
 If you are interested in BISOS, we suggest that you continue at bisos.overview.
+
+If you are interested in cloning all of Organization and all of their
+repositories so that you can process them all locally, we suggest that you continue at
+\ref{sec:CloningTheWholeThing}.
+
+
+%%%#+BEGIN: bx:dblock:lcnt:latex-section :disabledP "false" :seg-title "Cloning The Whole Thing" :label "auto"
+\begin{comment}
+*  [[elisp:(org-cycle)][| ]] [[elisp:(org-show-subtree)][|=]] [[elisp:(show-children 10)][|V]] [[elisp:(bx:orgm:indirectBufOther)][|>]] [[elisp:(bx:orgm:indirectBufMain)][|I]] [[elisp:(blee:ppmm:org-mode-toggle)][|N]] [[elisp:(org-top-overview)][|O]] [[elisp:(progn (org-shifttab) (org-content))][|C]] [[elisp:(delete-other-windows)][|1]]  /Section/   Cloning The Whole Thing ::  [[elisp:(org-cycle)][| ]]
+\end{comment}
+
+\section{Cloning The Whole Thing}
+\label{sec:CloningTheWholeThing}
+%%%#+END:
+
+Our usage model for structuring multiple Git repositories is not that
+of the usual models of submodules or subtrees. Instead we use gitMaps.
+
+%%%#+BEGIN: bx:dblock:lcnt:latex-subsection :disabledP "false" :seg-title "Model And Concept Of gitMaps" :label "auto"
+\begin{comment}
+**  [[elisp:(org-cycle)][| ]] [[elisp:(org-show-subtree)][|=]] [[elisp:(show-children 10)][|V]] [[elisp:(bx:orgm:indirectBufOther)][|>]] [[elisp:(bx:orgm:indirectBufMain)][|I]] [[elisp:(blee:ppmm:org-mode-toggle)][|N]] [[elisp:(org-top-overview)][|O]] [[elisp:(progn (org-shifttab) (org-content))][|C]] [[elisp:(delete-other-windows)][|1]]  /Subsection/   Model And Concept Of gitMaps ::  [[elisp:(org-cycle)][| ]]
+\end{comment}
+
+\subsection{Model And Concept Of gitMaps}
+\label{sec:ModelAndConceptOfgitMaps}
+%%%#+END:
+
+The basic concept is that the structure of the remote git respoistories and 
+the structure of the local git respoistories are independent of each other.
+
+The model is similar to how hardware engineers (electrical engineers)
+build circuit boards. Each circuit board has a parts list. The parts
+each have a number/pointer that refernces them in stock room (remote
+repository).  The parts are then organized on the circuit board (local
+repository) -- independent of how they were organized in the stock
+room.
+
+The gitMap model is implemented in bisos.bx-bases.
+
+%%%#+BEGIN: bx:dblock:lcnt:latex-subsection :disabledP "false" :seg-title "BISOS Developers gitMaps" :label "auto"
+\begin{comment}
+**  [[elisp:(org-cycle)][| ]] [[elisp:(org-show-subtree)][|=]] [[elisp:(show-children 10)][|V]] [[elisp:(bx:orgm:indirectBufOther)][|>]] [[elisp:(bx:orgm:indirectBufMain)][|I]] [[elisp:(blee:ppmm:org-mode-toggle)][|N]] [[elisp:(org-top-overview)][|O]] [[elisp:(progn (org-shifttab) (org-content))][|C]] [[elisp:(delete-other-windows)][|1]]  /Subsection/   BISOS Developers gitMaps ::  [[elisp:(org-cycle)][| ]]
+\end{comment}
+
+\subsection{BISOS Developers gitMaps}
+\label{sec:BISOSDevelopersgitMaps}
+%%%#+END:
+
+
+To get a mapping of BISOS Remote Repositories to your local /bisos
+bases follow the steps in the bisos.bootstrap module.
+
+
+
 
 
 %%%#+BEGIN: bx:dblock:lcnt:latex:toc-insert  :class "art+pres" :langs "en+fa" :toc "" :tables "" :figures ""
