Added sample code.

--- a/gen.readme/bodyArticleEnFa.tex
+++ b/gen.readme/bodyArticleEnFa.tex
@@ -79,6 +79,25 @@ repositories so that you can process them all locally, we suggest that you conti
 \ref{sec:CloningTheWholeThing}.
 
 
+%%%#+BEGIN: bx:dblock:lcnt:latex-section :disabledP "false" :seg-title "Sample Code"
+%%% Args: :class "book|pres+art" :langs "en+fa" :disabledP "false" :seg-title "str" :short-title "str" :label "auto"
+\begin{whenOrg}
+*  _[[elisp:(blee:menu-sel:outline:popupMenu)][±]]_ _[[elisp:(blee:menu-sel:navigation:popupMenu)][Ξ]]_ [[elisp:(outline-show-branches+toggle)][|=]] [[elisp:(bx:orgm:indirectBufOther)][|>]] *[[elisp:(blee:ppmm:org-mode-toggle)][|N]]*  Section    [[elisp:(outline-show-subtree+toggle)][||]]   /Sample Code/ ::  [[elisp:(org-cycle)][| ]]
+\end{whenOrg}
+
+\section{Sample Code}
+%%%#+END:
+
+Most of Mohsen's BISOS and ByStar related code is written COMEEGA
+\url{https://github.com/bx-blee/comeega}. Think of COMEEGA
+(Collaborative Org-Mode Enhanced Emacs Generalized Authorship) as
+inverse of Literate Programming.
+
+Many prefer to consider traditional Python code as sample code.
+For that purpose, there is a somewhat involved Web Scraping example at:
+\url{https://github.com/bxexamples/webServicesScraping}.
+
+
 %%%#+BEGIN: bx:dblock:lcnt:latex-section :disabledP "false" :seg-title "Cloning The Whole Thing" :label "auto"
 \begin{comment}
 *  [[elisp:(org-cycle)][| ]] [[elisp:(org-show-subtree)][|=]] [[elisp:(show-children 10)][|V]] [[elisp:(bx:orgm:indirectBufOther)][|>]] [[elisp:(bx:orgm:indirectBufMain)][|I]] [[elisp:(blee:ppmm:org-mode-toggle)][|N]] [[elisp:(org-top-overview)][|O]] [[elisp:(progn (org-shifttab) (org-content))][|C]] [[elisp:(delete-other-windows)][|1]]  /Section/   Cloning The Whole Thing ::  [[elisp:(org-cycle)][| ]]
